--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <h4>
                                     Выдув на термопластавтоматах
                                 </h4>
-                                <img src="images/machine1.jpg" width="200px" alt="Наше оборудование">
+                                <img src="images/mashine1.png" width="200px" alt="Наше оборудование">
                                 <img src="images/plast1.png" width="200px" alt="Производимые материалы">
                             </div>
 
