--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
 
      <header class="header">
         <div class="content screen1 ">
-            <div>
-                <img src="images/logo.svg" alt="logo" width="300">
+            <div class="logodiv">
+                <img src="images/logo.svg" alt="logo" width="300px">
             </div> 
-       <div class="text"> <h1>Группа компаний Мир полимеров предлагает полный цикл услуг, связанный с производством продукции из полимерных материалов.</h2>
-        <p>На производственных площадках в Бресте, Гомеле и Минске с использованием технологического оборудования возможно изготовление продукции самого различного направления.
-        Производство возможно из сырья заказчика, либо из предлагаемых в наличие материалов: ПЭ, ПП, ПВХ, АБС, ПК, ПБТ, ПА, предлагаются услуги по проектированию и изготовлению пресс-форм и оснастки.</p> </div>
+       <div class="text"> <h1>Группа компаний Мир полимеров предлагает полный цикл услуг,
+            связанный с производством продукции из полимерных материалов.</h2>
+        <p>На производственных площадках в Бресте, Гомеле и Минске с использованием
+             технологического оборудования возможно изготовление продукции самого различного направления.
+        Производство возможно из сырья заказчика, либо из предлагаемых в наличие материалов:
+         ПЭ, ПП, ПВХ, АБС, ПК, ПБТ, ПА, предлагаются услуги по проектированию и изготовлению пресс-форм и оснастки.</p> </div>
     </div>
      
     </div>
@@ -128,9 +131,9 @@
 
 
 
-    <section >
+    <section  >
 
-        <div class="content spbet">
+        <div class="content">
             <div class="str">
                 <h2> Продажа полимерных материалов</h2>
             </div>   
@@ -140,7 +143,7 @@
                 <h4>
                     Полистирол (PS / ПС)             
                 </h4>
-                <img src="images/ps.jpg" width="200px" alt="Наше оборудование"  class="imgg">
+                <img src="images/ps.jpg" width="200px" alt="Маркировка Полистирола"  class="imgg">
             </div>
 
 
@@ -261,9 +264,6 @@
         </button>
      </div> 
     </section>
-
-
-
 
 
     <section class="section3">
@@ -398,7 +398,7 @@
             <div>
                 <h2>   Контакты </h2>
                 <h3>   +375291488636</h3>
-                <h3>   info mir p by</h>
+                <h3>   info mir p by</h3>
             </div>
             <div>
                 <img src="images/Belarus.jpg" width="600px" alt="Map">
