adaptive for little

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <h3>   info mir p by</h3>
             </div>
             <div>
-                <img src="images/Belarus.jpg" width="600px" alt="Map">
+                <img src="images/Belarus.jpg"  class="map" alt="Map">
                 
             </div>
         </div>  
