--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section class="section3">
         <div class="content screen">
             <div class="str">
-                <h2>
+                <h2 class="topic">
                     Производство продукции из полимерных материалов
                 </h2>
             </div>
