--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">   
     <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -265,7 +267,7 @@
     </section>
 
 
-    <section class="section3">
+    <section class="section3 sec3">
         <div class="content screen">
 
             <div class="str">
@@ -402,7 +404,7 @@
         
     </footer>
     <footer>
-        <h4 class="res"> Mir Polymerov, 2021</h4>
+        <p class="res"> Mir Polymerov, 2021</p>
 </footer>
  
 
