--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <h4>
                     Полипропилен (PP / ПП)
                 </h4>
-                <img src="images/marks/pp.jpg" width="200px" alt="Маркировка ПП" class="imgg">
+                <img src="images/marks/PP.jpg" width="200px" alt="Маркировка ПП" class="imgg">
             </div>
 
             <div class="cardd">
@@ -393,8 +393,8 @@
         <div class="contentfoot screen2">
             <div>
                 <h2>   Контакты </h2>
-                <h3>  <a href="tel:+375291488636"> +375-29-14-88-636  </a></h3>
-                <h3>   info mir p by</h3>
+                <!-- <h3>  <a href="tel:+375291488636"> +375-29-14-88-636  </a></h3>
+                <h3>   info mir p by</h3> -->
             </div>
             <div>
                 <img src="images/Belarus.jpg"  class="map" alt="Map">
