--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     <p> 
                         <ul>
                             <li>
-                                Осушающаяя добавка ОД-1
+                                Осушающая добавка ОД-1
                             </li>
                             <li>Тальконаполненные добавки</li>
                             <li> Процессинговая добавка</li>
