--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
         <div class="contentfoot screen2">
             <div>
                 <h2>   Контакты </h2>
-                <!-- <h3>  <a href="tel:+375291488636"> +375-29-14-88-636  </a></h3>
-                <h3>   info mir p by</h3> -->
+                
+                <h3>   <a href="mailto:mirpolim2012@gmail.com">&#128386; mirpolim2012@gmail.com</a></h3> 
             </div>
             <div>
                 <img src="images/Belarus.jpg"  class="map" alt="Map">
@@ -404,7 +404,7 @@
         
     </footer>
     <footer>
-        <p class="res"> Mir Polymerov, 2021</p>
+        <p class="res"> &copy; 2012-2021</p>
 </footer>
  
 
