--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
                 <h2>   Контакты </h2>
                 
                 <h3>   <a href="mailto:mirpolim2012@gmail.com">&#128386; mirpolim2012@gmail.com</a></h3> 
+                <h3> <a href="tel:+375444500093">&#9990; +375444500093</a> </h3> 
             </div>
             <div>
                 <img src="images/Belarus.jpg"  class="map" alt="Map">
