--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="theme-color" content="#ffffff">
-    <title>Mir Polymerov</title>
+    <title>Minsk-Polymer</title>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
             <div class="logodiv">
                 <img src="images/logo.svg" alt="logo" width="300px">
             </div> 
-       <div class="text"> <h1>Группа компаний Мир полимеров предлагает полный цикл услуг,
+       <div class="text"> <h1>Группа компаний Минск-Полимер предлагает полный цикл услуг,
             связанный с производством продукции из полимерных материалов.</h2>
         <p>На производственных площадках в Бресте, Гомеле и Минске с использованием
              технологического оборудования возможно изготовление продукции самого различного направления.
