--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="theme-color" content="#ffffff">
-    <title>Minsk-Polymer</title>
+    <title>Minsk-Polimer</title>
 </head>
 <body>
 
      <header class="header">
         <div class="content screen1 ">
             <div class="logodiv">
-                <img src="images/logo.svg" alt="logo" width="300px">
+                <img src="images/logo2.svg" alt="logo" width="300px">
             </div> 
        <div class="text"> <h1>Группа компаний Минск-Полимер предлагает полный цикл услуг,
             связанный с производством продукции из полимерных материалов.</h2>
@@ -394,7 +394,7 @@
             <div>
                 <h2>   Контакты </h2>
                 
-                <h3>   <a href="mailto:mirpolim2012@gmail.com">&#128386; mirpolim2012@gmail.com</a></h3> 
+                <h3>   <a href="mailto:minskpolimer@gmail.com">&#128386; minskpolimer@gmail.com</a></h3> 
                 <h3> <a href="tel:+375444500093">&#9990; +375444500093</a> </h3> 
             </div>
             <div>
