--- a/index_copy.html
+++ b/index_copy.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="scss/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap"
+        rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -21,9 +29,9 @@
 </head>
 
 <body>
-    <header class="wrapper">
-        <div class="photo-wrapper">
-            <div class="content">
+    <header class="wrapper photo-wrapper">
+        <div class="content">
+            <div class=" header">
                 <div>
                     <img src="images/logo2.svg" alt="logo" width="300px">
                 </div>
@@ -44,7 +52,7 @@
 
     </header>
     <main class="wrapper">
-        <section class="wrapper-section">
+        <section class="wrapper-section" id="wrapper-machines">
             <div class="content">
                 <div>
                     <h2>
@@ -105,7 +113,8 @@
 
 
         </section>
-        <section class="wrapper-section">
+
+        <section class="wrapper-section" id="wrapper-materials">
 
 
             <div class="content">
@@ -209,16 +218,14 @@
                 <button class="btn">
                     Показать больше
                 </button>
-            
+
             </div>
 
 
 
         </section>
-        <section class="wrapper-section">
 
-
-
+        <section class="wrapper-section" id="wrapper-adds">
 
             <div class="content">
 
@@ -228,7 +235,7 @@
                     </h2>
                 </div>
 
-                <div>
+                <div class="cards_adds">
 
                     <div>
                         <h4>
@@ -240,20 +247,6 @@
                             <li> Для полистирола</li>
                         </ul>
                     </div>
-
-
-                    <div>
-                        <h4>
-                            Модифицирующие и технологические добавки
-                        </h4>
-
-                        <ul>
-                            <li> Осушающая добавка ОД-1</li>
-                            <li>Тальконаполненные добавки</li>
-                            <li> Процессинговая добавка</li>
-                        </ul>
-                    </div>
-
                     <div>
                         <h4>
                             Добавки для полимеров и суперконцентраты модификаторы
@@ -269,26 +262,40 @@
 
                         </ul>
                     </div>
+
+                    <div>
+                        <h4>
+                            Модифицирующие и технологические добавки
+                        </h4>
+
+                        <ul>
+                            <li> Осушающая добавка ОД-1</li>
+                            <li>Тальконаполненные добавки</li>
+                            <li> Процессинговая добавка</li>
+                        </ul>
+                    </div>
+
+
                 </div>
 
             </div>
         </section>
 
 
-        <section class="wrapper-section">
+        <section class="wrapper-section" id="wrapper-second_hand">
             <div class="content">
 
                 <div>
                     <h2>Вторичная переработка полимерного сырья</h2>
                 </div>
 
-                <div>
+                <div class="cards_second_hand">
 
-                    <div class="card_second_hand">
+                    <div>
                         <h4> Покупка отходов</h4>
                         <img src="images/gtovogotovo_compressed.jpg" alt="Покупка Отходов">
                     </div>
-                    <div class="card_second_hand">
+                    <div>
                         <h4> Продажа сырья</h4>
                         <img src="images/perre_compressed.jpg" alt="Продажа сырья">
                     </div>
@@ -300,35 +307,27 @@
         </section>
 
     </main>
-    <footer class="wrapper">
+    <footer class="wrapper" id="footer">
         <div class="content">
-            <div>
-                <h2> Контакты </h2>
-                <h3> <a href="mailto:minskpolimer@gmail.com">&#128386; minskpolimer@gmail.com</a></h3>
-                <h3> <a href="tel:+375444500093">&#9990; +375444500093</a> </h3>
-            </div>
-            <div>
+            <div class="footer__content">
+                <div>
+                    <h2> Контакты </h2>
+                    <h3> <a href="mailto:minskpolimer@gmail.com">&#128386; minskpolimer@gmail.com</a></h3>
+                    <h3> <a href="tel:+375444500093">&#9990; +375444500093</a> </h3>
+                </div>
                 <img src="images/Belarus.jpg" class="map" alt="Map">
+                <!-- <div class="footer__img">
+                    
+                </div> -->
             </div>
+            <div> <p class="res"> &copy; 2012-2022</p></div>
+
         </div>
 
     </footer>
     <script src="libs/jquery.min.js"></script>
     <script src="libs/slick/slick.min.js"></script>
     <script src="main.js"></script>
-    <script>
-//         $(".btn").click(function () {
-// 	$(".hide__part").slideToggle("slow");
-
-// 	if (this.innerHTML == "Показать меньше") {
-// 		this.innerHTML = "Показать больше";
-// 		return;
-// 	}
-// 	else this.innerHTML = "Показать меньше";
-
-
-// });
-    </script>
 
 </body>
 
