--- a/index_copy.html
+++ b/index_copy.html
@@ -206,7 +206,7 @@
                     <div class="hide__part" style="display:none">
                         <h4>
                             Термопластичные вулканизированные
-                            эластомеры на основе полиолефинов (TPV, EPDM/PP, EPR/PP)
+                            эластомеры (TPV, EPDM/PP, EPR/PP)
                         </h4>
                         <img src="images/marks/tpv.jpg" alt="Маркировка TPV" class="">
                     </div>
