fix: company name

--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
 
     <link rel="stylesheet" href="scss/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -25,7 +21,7 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="libs/slick/slick.css">
     <link rel="stylesheet" href="libs/slick/slick-theme.css">
-    <title>Minsk-Polimer</title>
+    <title>Мир Полимеров</title>
 </head>
 
 <body>
@@ -33,17 +29,13 @@
         <div class="content">
             <div class=" header">
                 <div>
-                    <img src="images/logo2.svg" alt="logo" width="300px">
+                    <img src="images/logo_mir_p.svg" alt="logo" width="300px">
                 </div>
                 <div>
-                    <h1>Группа компаний Минск-Полимер предлагает полный цикл услуг,
-                        связанный с производством продукции из полимерных материалов.
+                    <h1>Группа компаний Мир Полимеров предлагает полный цикл услуг, связанный с производством продукции из полимерных материалов.
                     </h1>
-                    <p>На производственных площадках в Бресте, Гомеле и Минске с использованием
-                        технологического оборудования возможно изготовление продукции самого различного направления.
-                        Производство возможно из сырья заказчика, либо из предлагаемых в наличие материалов:
-                        ПЭ, ПП, ПВХ, АБС, ПК, ПБТ, ПА, предлагаются услуги по проектированию и изготовлению пресс-форм и
-                        оснастки.
+                    <p>На производственных площадках в Бресте, Гомеле и Минске с использованием технологического оборудования возможно изготовление продукции самого различного направления. Производство возможно из сырья заказчика, либо из предлагаемых в
+                        наличие материалов: ПЭ, ПП, ПВХ, АБС, ПК, ПБТ, ПА, предлагаются услуги по проектированию и изготовлению пресс-форм и оснастки.
                     </p>
                 </div>
             </div>
@@ -198,15 +190,13 @@
                     </div>
                     <div class="hide__part" style="display:none">
                         <h4>
-                            Стирол-бутадиен-стирольный (SBS)
-                            и Стирол-этилен-бутилен-стирольный (SEBS) термопластичный эластомер.
+                            Стирол-бутадиен-стирольный (SBS) и Стирол-этилен-бутилен-стирольный (SEBS) термопластичный эластомер.
                         </h4>
                         <img src="images/marks/SBS.jpg" alt="Маркировка SBS" class="">
                     </div>
                     <div class="hide__part" style="display:none">
                         <h4>
-                            Термопластичные вулканизированные
-                            эластомеры (TPV, EPDM/PP, EPR/PP)
+                            Термопластичные вулканизированные эластомеры (TPV, EPDM/PP, EPR/PP)
                         </h4>
                         <img src="images/marks/tpv.jpg" alt="Маркировка TPV" class="">
                     </div>
@@ -312,12 +302,14 @@
             <div class="footer__content">
                 <div>
                     <h2> Контакты </h2>
-                    <h3> <a href="mailto:minskpolimer@gmail.com">&#128386; minskpolimer@gmail.com</a></h3>
-                    <h3> <a href="tel:+375444500093">&#9990; +375444500093</a> </h3>
+                    <h3> <a href="mailto:mirpolimerovbel@gmail.com">&#128386; mirpolimerovbel@gmail.com</a></h3>
+                    <h3> <a href="tel:+37544581756">&#9990; +37544581756</a> </h3>
                 </div>
                 <img src="images/Belarus.jpg" class="map" alt="Map">
             </div>
-            <div> <p class="res"> &copy; 2012-2022</p></div>
+            <div>
+                <p class="res"> &copy; 2012-2022</p>
+            </div>
 
         </div>
 
