--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <h3> <a href="mailto:mirpolimerovbel@gmail.com">&#128386; mirpolimerovbel@gmail.com</a></h3>
                     <h3> <a href="tel:+37544581756">&#9990; +37544581756</a> </h3>
                 </div>
-                <img src="images/Belarus.jpg" class="map" alt="Map">
+                <img src="images/Belarus_1.jpg" class="map" alt="Map">
             </div>
             <div>
                 <p class="res"> &copy; 2012-2022</p>
